<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lazer Pointer</string>
    <string name="med_text">Medium Text</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_past_connections">PastConnections</string>
    <string name="select_text">Select</string>
    <string name="ip_prompt">Enter IP</string>
    <string name="port_prompt">Enter Port</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="recent_conenctions">Recent Connections</string>
    <string name="sync">Sync</string>
    <string name="color_label">Color:</string>
    <string name="id_label">ID:</string>
    <string name="z_label">Z Coordinate: </string>
    <string name="x_label">X Coordinate: </string>
    <string name="y_label">Y Coordinate: </string>
    <string name="connection_label">Not Connected!</string>
    <string name="draw_text">Draw</string>
    <string name="shape_prompt">Choose a shape</string>

    <string-array name="shape_arrays">
        <item>Square</item>
        <item>Circle</item>
        <item>Solid Square</item>
        <item>Solid Circle</item>
        <item>Text</item>
    </string-array>

</resources>