<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.arizona.group5.ClientActivity" >

    <TextView
        android:id="@+id/client_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_label" />

    <TextView
        android:id="@+id/client_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/client_color"
        android:layout_alignStart="@+id/client_color"
        android:layout_below="@+id/client_color"
        android:layout_marginTop="31dp"
        android:text="@string/id_label" />

    <TextView
        android:id="@+id/zcoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/client_id"
        android:layout_alignStart="@+id/client_id"
        android:layout_below="@+id/client_id"
        android:layout_marginTop="31dp"
        android:text="@string/z_label" />

    <TextView
        android:id="@+id/ycoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zcoor"
        android:layout_alignStart="@+id/zcoor"
        android:layout_below="@+id/zcoor"
        android:text="@string/y_label" />

    <TextView
        android:id="@+id/xcoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ycoor"
        android:layout_alignStart="@+id/ycoor"
        android:layout_below="@+id/ycoor"
        android:text="@string/x_label" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xcoor"
        android:layout_centerHorizontal="true"
        android:text="@string/connection_label" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/client_id"
        android:layout_toEndOf="@+id/xcoor"
        android:layout_toRightOf="@+id/textView1" />

    <Button
        android:id="@+id/client_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/sync" />

    <Button
        android:id="@+id/draw_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_connect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/draw_text" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/draw_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/disconnect" />

</RelativeLayout>